--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,82 @@
+# To update the project's gitignore, try at the root directory:
+#
+#     git config --global core.excludesfile .gitignore
+#
+# For instructions to untrack existing objects in the project see:
+# https://stackoverflow.com/questions/24290358/remove-a-folder-from-git-tracking
+# git config core.filemode true
+# https://stackoverflow.com/questions/14267441/automatically-apply-git-update-index-chmod-x-to-executable-files
+
+#########################
+# image files
+#########################
+
+*.pdf
+*.png
+*.gif
+*.jpg
+*.jpeg
+*.tiff
+
+#########################
+# Compiled source
+#########################
+
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.lib
+*.obj
+*.pdb
+*.mod
+*.smod
+*.asv
+*.png
+*.out
+
+#########################
+# Packages              #
+#########################
+
+# unpack these files and commit the raw source.
+# git has its own builtin compression methods.
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.tgz
+
+######################
+# Logs and databases #
+######################
+
+*.log
+*.sql
+*.sqlite
+
+######################
+# OS generated files #
+######################
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+######################
+# C++/Fortran
+######################
+
 # Prerequisites
 *.d
 
@@ -30,3 +109,39 @@
 *.exe
 *.out
 *.app
+
+#########################
+# CMake
+#########################
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+#########################
+# temporary output files
+#########################
+
+.ipynb_checkpoints/*
+build/*
+trash/*
+temp/*
+bin/*
+_*/
+
+*_log.txt
+*_time.txt
+*_chain.txt
+*_report.txt
+*_restart.txt
+*.stderr
+*.temp
+*.rfn
