--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,6 @@ Thumbs.db
 *.rfn
 ___*___.*
 
-
 #########################
 # CMake
 #########################
@@ -140,3 +139,20 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+#########################
+# figures
+#########################
+
+*.pdf
+*.png
+*.jpg
+*.gif
+*.jpeg
+*.tiff
+
+#########################
+# LaTeX
+#########################
+
+*.tex
