adding python codes for synthetic redhsift estimates

--- a/.gitignore
+++ b/.gitignore
@@ -104,9 +104,11 @@ Thumbs.db
 #########################
 
 **/.ipynb_checkpoints/*
+**/__pycache__/*
 **/build/*
 **/temp/*
 **/bin/*
+**/out/*
 **/___*___/*
 
 #########################
